# advent

./: .gitignore
2022/haskell/: README.md  haskell.cabal
2022/haskell/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2022/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2022/haskell/dist-newstyle/tmp/environment.-179975/: .ghc.environment.x86_64-linux-8.10.7
2022/rust/: Cargo.toml  README.md
2022/rust/src/: day1.rs  day12.rs  day2.rs  day3.rs  main.rs
2023/data/: day1.txt  day10.txt  day11.txt  day16.txt  day17.txt  day4.txt  day9.txt
2023/rust/: Cargo.toml  script.py
2023/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2024/data/: day10.txt  day2.txt
2024/rust/: build.py
2024/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day19.rs  day2.rs  day21.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
